--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3259,6 +3259,194 @@ input, select, textarea { -moz-appearance: none; -webkit-appearance: none; -ms-a
 			object-position: right;
 		}
 
+/* Spotlight (style2) */
+
+	.spotlight.style2 {
+		padding: 7rem 7rem 5rem 7rem ;
+		-moz-align-items: center;
+		-webkit-align-items: center;
+		-ms-align-items: center;
+		align-items: center;
+		display: -moz-flex;
+		display: -webkit-flex;
+		display: -ms-flex;
+		display: flex;
+		-moz-flex-direction: row-reverse;
+		-webkit-flex-direction: row-reverse;
+		-ms-flex-direction: row-reverse;
+		flex-direction: row-reverse;
+		-moz-justify-content: center;
+		-webkit-justify-content: center;
+		-ms-justify-content: center;
+		justify-content: center;
+		position: relative;
+		overflow-x: hidden;
+		text-align: left;
+	}
+
+		.spotlight.style2 .content {
+			width: 44.5rem;
+			max-width: 100%;
+		}
+
+		.spotlight.style2 .image {
+			-moz-flex-grow: 0;
+			-webkit-flex-grow: 0;
+			-ms-flex-grow: 0;
+			flex-grow: 0;
+			-moz-flex-shrink: 0;
+			-webkit-flex-shrink: 0;
+			-ms-flex-shrink: 0;
+			flex-shrink: 0;
+			width: 21rem;
+			height: 21rem;
+			border-radius: 100%;
+			margin: 0 3.5rem 2rem 0;
+		}
+
+			.spotlight.style2 .image img {
+				-moz-object-fit: cover;
+				-webkit-object-fit: cover;
+				-ms-object-fit: cover;
+				object-fit: cover;
+				-moz-object-position: center;
+				-webkit-object-position: center;
+				-ms-object-position: center;
+				object-position: center;
+				display: block;
+				width: 100%;
+				height: 100%;
+				border-radius: 100%;
+			}
+
+		@media screen and (max-width: 1680px) {
+
+			.spotlight.style2 {
+				padding: 5rem 5rem 3rem 5rem ;
+			}
+
+		}
+
+		@media screen and (max-width: 1280px) {
+
+			.spotlight.style2 {
+				padding: 4rem 4rem 2rem 4rem ;
+			}
+
+		}
+
+		@media screen and (max-width: 980px) {
+
+			.spotlight.style2 {
+				padding: 3.75rem 3rem 1.75rem 3rem ;
+			}
+
+				.spotlight.style2 .image {
+					width: 18.375rem;
+					height: 18.375rem;
+				}
+
+		}
+
+		@media screen and (max-width: 736px) {
+
+			.spotlight.style2 {
+				padding: 2.5rem 2rem 0.5rem 2rem ;
+				-moz-align-items: -moz-flex-start;
+				-webkit-align-items: -webkit-flex-start;
+				-ms-align-items: -ms-flex-start;
+				align-items: flex-start;
+			}
+
+				.spotlight.style2 .image {
+					width: 15.75rem;
+					height: 15.75rem;
+					margin: 0 2rem 2rem 0;
+				}
+
+		}
+
+		@media screen and (orientation: portrait) {
+
+			.spotlight.style2 {
+				-moz-align-items: center;
+				-webkit-align-items: center;
+				-ms-align-items: center;
+				align-items: center;
+				-moz-flex-direction: column-reverse;
+				-webkit-flex-direction: column-reverse;
+				-ms-flex-direction: column-reverse;
+				flex-direction: column-reverse;
+				text-align: center !important;
+			}
+
+				.spotlight.style2 .content {
+					width: 34rem;
+					max-width: 100%;
+				}
+
+				.spotlight.style2 .image {
+					margin-right: 0;
+				}
+
+		}
+
+		.spotlight.style2.orient-left {
+			-moz-flex-direction: row;
+			-webkit-flex-direction: row;
+			-ms-flex-direction: row;
+			flex-direction: row;
+		}
+
+			.spotlight.style2.orient-left .image {
+				margin: 0 0 2rem 3.5rem;
+			}
+
+			@media screen and (max-width: 736px) {
+
+				.spotlight.style2.orient-left .image {
+					margin: 0 0 2rem 2rem;
+				}
+
+			}
+
+			@media screen and (orientation: portrait) {
+
+				.spotlight.style2.orient-left {
+					-moz-flex-direction: column-reverse;
+					-webkit-flex-direction: column-reverse;
+					-ms-flex-direction: column-reverse;
+					flex-direction: column-reverse;
+				}
+
+					.spotlight.style2.orient-left .image {
+						margin-left: 0;
+					}
+
+			}
+
+		.spotlight.style2.content-align-center {
+			text-align: center;
+		}
+
+		.spotlight.style2.content-align-right {
+			text-align: right;
+		}
+
+		.spotlight.style2.image-position-left .image img {
+			-moz-object-position: left;
+			-webkit-object-position: left;
+			-ms-object-position: left;
+			object-position: left;
+		}
+
+		.spotlight.style2.image-position-right .image img {
+			-moz-object-position: right;
+			-webkit-object-position: right;
+			-ms-object-position: right;
+			object-position: right;
+		}
+
 /* Spotlight (style5) */
 
 	.spotlight.style5 {
@@ -5925,4 +6113,5 @@ input, select, textarea { -moz-appearance: none; -webkit-appearance: none; -ms-a
   color: #888;
   font-size: 0.9rem;
 }
+
 
